# Toy2d

./: .gitignore  CMakeLists.txt  README.md  frag.spv  vert.spv
cmake/: CopyFiles.cmake  FindSDL2.cmake
sandbox/: CMakeLists.txt  sandbox.cpp
shader/: shader.frag  shader.vert
src/: buffer.cpp  command_manager.cpp  context.cpp  descriptor_manager.cpp  math.cpp  render_processor.cpp  renderer.cpp  shader.cpp  swapchain.cpp  texture.cpp  tool.cpp  toy2d.cpp
toy2d/: buffer.hpp  command_manager.hpp  context.hpp  descriptor_manager.hpp  math.hpp  render_processor.hpp  renderer.hpp  shader.hpp  swapchain.hpp  texture.hpp  tool.hpp  toy2d.hpp  vertex.hpp
