add_executable(sandbox)
aux_source_directory(./ SANDBOX_SRC)
target_sources(sandbox PRIVATE ${SANDBOX_SRC})
target_include_directories(sandbox PRIVATE ../toy2d)
target_include_directories(sandbox PRIVATE "$ENV{VULKAN_SDK}/Include")
target_include_directories(sandbox PRIVATE ../3rd_party/SDL2/include)
target_link_directories(toy2d PRIVATE ../3rd_party/SDL2/lib/x64)
target_link_libraries(sandbox PUBLIC toy2d SDL2main SDL2)
#CopyDLL(sandbox)
CopyShader(sandbox)
#CopyTexture(sandbox)